# planar-monocular-slam

./: CMakeLists.txt
output/: ba_input.txt  kalman_path.txt  optimized_camera_poses.txt  optimized_points.txt  optimized_poses.txt  optimized_robot_poses.txt
src/: bundle_adjustment.cpp  main.py  view_landmarks.py  view_path.py  visualize_results.py
